--- a/manifests/tetris-deploy.yaml
+++ b/manifests/tetris-deploy.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
         - name: tetris
-          image: magicalyak/docker-games:rebelchess
-          #image: nasi101/tetris # Replace with the actual image tag
+          image: magicalyak/docker-games:monopoly ## change containerPort and targetport (service.yaml) to 8000
+          #image: magicalyak/docker-games:rebelchess # change containerPort and targetport (service.yaml) to 8000
+          #image: nasi101/tetris # change containerPort and targetport (service.yaml) to 80
           ports:
             - containerPort: 8000 # Replace with the port your Tetris game listens on
